--- a/television.html
+++ b/television.html
@@ -17,27 +17,35 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./television.html">Televisor</a>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./television.html">Televisor</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./buscador.html">Buscador</a>
-                    </li>  
+                    <a class="nav-link " href="./buscador.html">Buscador</a>
+                    </li>   
+                    <li class="nav-item ">
+                      <a class="nav-link active" href="./funcionarios.html">Funcionarios</a>
+                    </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Nuevo Resgistro</a>
-                    </li>  
+                      <a class="nav-link" href="./visitas.html">Visitas</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./camara.html">Registro QR</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./manual.html">Registro Manual</a>
+                    </li>
                 </ul>
                 <ul class="d-flex navbar-nav ">
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Profile
+                      @faena
                     </a>
-                    <ul class="dropdown-menu " aria-labelledby="navbarDropdown" style="left: -106px;">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <ul class="dropdown-menu " aria-labelledby="navbarDropdown" style="left: -80px;">
+                      <li><a class="dropdown-item" href="#">Configuracion</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
+                  </ul>
                     </li>
                 </ul>
                 </div>
