--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             <label for="inputPassword" class="visually-hidden">Password</label>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
             <div class="checkbox mb-3">
-             
             </div>
-            <button class="w-100 btn btn-lg btn-primary" id="inputSubmit" name="login" type="submit">Sign in</button>
+            <a href="buscador.html"  class="w-100 btn btn-lg btn-primary" id="inputSubmit" name="login" type="submit">Iniciar Sesion</a>
             <p class="mt-5 mb-3 text-muted">© 2017–2021</p>
         </form>
     </main>
